fixing and improving logic