@@ -1,16 +1,15 @@
 package uk.gov.hmcts.reform.iacaseapi.domain.handlers.postsubmit;
 
+import static junit.framework.TestCase.assertTrue;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.hibernate.validator.internal.util.Contracts.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 import static org.mockito.Mockito.times;
 import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.PREV_JOURNEY_TYPE;
 
-import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -145,8 +144,7 @@ class ChangeRepresentationConfirmationTest {
                 Attributes.CASE_ID, List.of(String.valueOf(CASE_ID))
             )).build();
 
-        RoleAssignmentResource roleAssignmentResource =
-            new RoleAssignmentResource(Collections.singletonList(Assignment.builder().id(assignmentId).build()));
+        RoleAssignmentResource roleAssignmentResource = new RoleAssignmentResource(Arrays.asList(Assignment.builder().id(assignmentId).build()));
 
         when(callback.getEvent()).thenReturn(Event.NOC_REQUEST);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
@@ -159,46 +157,6 @@ class ChangeRepresentationConfirmationTest {
 
         verify(roleAssignmentService, times(1)).queryRoleAssignments(queryRequest);
         verify(roleAssignmentService, times(1)).deleteRoleAssignment(assignmentId, serviceUserToken);
-    }
-
-    @Test
-    void should_revoke_eldest_appellant_access_to_case_if_multiple() {
-
-        String assignmentIdOld = "assignmentId";
-        String assignmentIdMiddle = "assignmentIdMiddle";
-        String assignmentIdNew = "assignmentIdNew";
-        QueryRequest queryRequest = QueryRequest.builder()
-            .roleType(List.of(RoleType.CASE))
-            .roleName(List.of(RoleName.CREATOR))
-            .roleCategory(List.of(RoleCategory.CITIZEN))
-            .attributes(Map.of(
-                Attributes.JURISDICTION, List.of(Jurisdiction.IA.name()),
-                Attributes.CASE_TYPE, List.of("Asylum"),
-                Attributes.CASE_ID, List.of(String.valueOf(CASE_ID))
-            )).build();
-        Assignment assignmentOld = Assignment.builder().id(assignmentIdOld)
-            .created(LocalDateTime.of(2025, 2, 10, 0, 0, 0)).build();
-        Assignment assignmentMiddle = Assignment.builder().id(assignmentIdMiddle)
-            .created(LocalDateTime.of(2025, 2, 11, 0, 0, 0)).build();
-        Assignment assignmentNew = Assignment.builder().id(assignmentIdNew)
-            .created(LocalDateTime.of(2025, 2, 12, 0, 0, 0)).build();
-        List<Assignment> assignments = List.of(assignmentMiddle, assignmentOld, assignmentNew);
-        RoleAssignmentResource roleAssignmentResource = new RoleAssignmentResource(assignments);
-
-        when(callback.getEvent()).thenReturn(Event.NOC_REQUEST);
-        when(callback.getCaseDetails()).thenReturn(caseDetails);
-        when(caseDetails.getId()).thenReturn(CASE_ID);
-        when(caseDetails.getCaseData()).thenReturn(asylumCase);
-        when(asylumCase.read(PREV_JOURNEY_TYPE, JourneyType.class)).thenReturn(Optional.of(JourneyType.AIP));
-        when(roleAssignmentService.queryRoleAssignments(queryRequest)).thenReturn(roleAssignmentResource);
-        when(idamService.getServiceUserToken()).thenReturn("token");
-
-        changeRepresentationConfirmation.handle(callback);
-
-        verify(roleAssignmentService, times(1)).queryRoleAssignments(queryRequest);
-        verify(roleAssignmentService, times(1)).deleteRoleAssignment(assignmentIdOld, "token");
-        verify(roleAssignmentService, never()).deleteRoleAssignment(eq(assignmentIdNew), anyString());
-        verify(roleAssignmentService, never()).deleteRoleAssignment(eq(assignmentIdMiddle), anyString());
     }
 
     @Test
@@ -284,7 +242,7 @@ class ChangeRepresentationConfirmationTest {
                         Attributes.CASE_ID, List.of(String.valueOf(CASE_ID))
                 )).build();
 
-        RoleAssignmentResource roleAssignmentResource = new RoleAssignmentResource(List.of(Assignment.builder().id(assignmentId).build()));
+        RoleAssignmentResource roleAssignmentResource = new RoleAssignmentResource(Arrays.asList(Assignment.builder().id(assignmentId).build()));
 
         when(callback.getEvent()).thenReturn(Event.APPELLANT_IN_PERSON_MANUAL);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
